force-app/main/default/objects/ProductMix__c/ProductMix__c.object-meta.xml
<CustomObject>
    <label>Current Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>