force-app/main/default/objects/ProductMix__c/fields/Accident_Protection__c.field-meta.xml
<CustomField>
    <fullName>Accident_Protection__c</fullName>
    <label>Accident Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>