force-app/main/default/objects/ProductMix__c/fields/AccountFirm__c.field-meta.xml
<CustomField>
    <fullName>AccountFirm__c</fullName>
    <label>Company/Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Product_Mixes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>