force-app/main/default/objects/ProductMix__c/fields/Adult_Flu_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Adult_Flu_Clinic__c</fullName>
    <label>Adult Flu Clinic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>