force-app/main/default/objects/ProductMix__c/fields/Advocate4Me__c.field-meta.xml
<CustomField>
    <fullName>Advocate4Me__c</fullName>
    <label>Advocate4Me</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate4Me Elite applies</fullName>
            </value>
            <value>
                <fullName>Advocate4Me Premier applies</fullName>
            </value>
            <value>
                <fullName>Advocate4Me applies</fullName>
            </value>
            <value>
                <fullName>Advocate4Me does not apply</fullName>
            </value>
            <value>
                <fullName>Optum Health Care Advisor-Optum Contract applies</fullName>
            </value>
            <value>
                <fullName>Optum Health Care Advisor-UHC Contract applies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>