force-app/main/default/objects/ProductMix__c/fields/Behavioral_Health__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Health__c</fullName>
    <label>Behavioral Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>