force-app/main/default/objects/ProductMix__c/fields/Cancer_Support_Program__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Support_Program__c</fullName>
    <label>Cancer Support Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>