force-app/main/default/objects/ProductMix__c/fields/Care_Mgmt_Decision_Supprt_Women_s_Health__c.field-meta.xml
<CustomField>
    <fullName>Care_Mgmt_Decision_Supprt_Women_s_Health__c</fullName>
    <label>ZZ_Care Mgmt\Decision Support\Women&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>