force-app/main/default/objects/ProductMix__c/fields/Centers_of_Excellence__c.field-meta.xml
<CustomField>
    <fullName>Centers_of_Excellence__c</fullName>
    <label>Complex Condition(Centers of Excellence)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>