force-app/main/default/objects/ProductMix__c/fields/CHD_Center_of_Excellence__c.field-meta.xml
<CustomField>
    <fullName>CHD_Center_of_Excellence__c</fullName>
    <label>CHD Center of Excellence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>