force-app/main/default/objects/ProductMix__c/fields/Chronic_Obstructive_Pulmonary_Disease__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Obstructive_Pulmonary_Disease__c</fullName>
    <label>Chronic Obstructive Pulmonary Disease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>