force-app/main/default/objects/ProductMix__c/fields/Commuter_Expense_Reimbursement_Account__c.field-meta.xml
<CustomField>
    <fullName>Commuter_Expense_Reimbursement_Account__c</fullName>
    <label>Commuter Expense Reimbursement Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>