force-app/main/default/objects/ProductMix__c/fields/Complex_Care_Concierge_C3__c.field-meta.xml
<CustomField>
    <fullName>Complex_Care_Concierge_C3__c</fullName>
    <label>Complex Care Concierge (C3)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>