force-app/main/default/objects/ProductMix__c/fields/Current_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Product Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>