force-app/main/default/objects/ProductMix__c/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <label>Dental</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>