force-app/main/default/objects/ProductMix__c/fields/Disease_Management__c.field-meta.xml
<CustomField>
    <fullName>Disease_Management__c</fullName>
    <label>Disease Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>