force-app/main/default/objects/ProductMix__c/fields/Doula_Support_programs__c.field-meta.xml
<CustomField>
    <fullName>Doula_Support_programs__c</fullName>
    <label>Doula Support programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>