force-app/main/default/objects/ProductMix__c/fields/EAP_Global__c.field-meta.xml
<CustomField>
    <fullName>EAP_Global__c</fullName>
    <label>EAP - Global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>