force-app/main/default/objects/ProductMix__c/fields/ECRS_Type__c.field-meta.xml
<CustomField>
    <fullName>ECRS_Type__c</fullName>
    <label>ECRS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECRS</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>