force-app/main/default/objects/ProductMix__c/fields/Engagement_Solutions_Client__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Solutions_Client__c</fullName>
    <label>Engagement Solutions Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - UHC</fullName>
            </value>
            <value>
                <fullName>Yes - Optum</fullName>
            </value>
            <value>
                <fullName>Yes - UHC-Optum</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>