force-app/main/default/objects/ProductMix__c/fields/Engagement_Solutions_Tier__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Solutions_Tier__c</fullName>
    <label>Engagement Solutions Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>