force-app/main/default/objects/ProductMix__c/fields/Flexible_Spending_Account_FSA__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Spending_Account_FSA__c</fullName>
    <label>Flexible Spending Account (FSA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>