force-app/main/default/objects/ProductMix__c/fields/Foot_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Foot_Surgery__c</fullName>
    <label>Foot Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Authorization Required</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>