force-app/main/default/objects/ProductMix__c/fields/Funding_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Funding_Arrangements__c</fullName>
    <label>Funding Arrangements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Insured (ASO)</fullName>
            </value>
            <value>
                <fullName>Fully-Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>