force-app/main/default/objects/ProductMix__c/fields/Global_Products__c.field-meta.xml
<CustomField>
    <fullName>Global_Products__c</fullName>
    <label>Global Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expat Insurance</fullName>
            </value>
            <value>
                <fullName>Business Travel</fullName>
            </value>
            <value>
                <fullName>Safe Trip</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>