force-app/main/default/objects/ProductMix__c/fields/Health_Incentive_Account_HIA__c.field-meta.xml
<CustomField>
    <fullName>Health_Incentive_Account_HIA__c</fullName>
    <label>Health Incentive Account (HIA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>