force-app/main/default/objects/ProductMix__c/fields/Incentive_Products__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Products__c</fullName>
    <label>Incentive Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>