force-app/main/default/objects/ProductMix__c/fields/Infertility__c.field-meta.xml
<CustomField>
    <fullName>Infertility__c</fullName>
    <label>Infertility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Authorization Required</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
                <isActive>false</isActive>
                <label>NULL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>