force-app/main/default/objects/ProductMix__c/fields/Kidney_Resource_Services__c.field-meta.xml
<CustomField>
    <fullName>Kidney_Resource_Services__c</fullName>
    <label>Kidney Resource Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Kidney Resource Services (KRS) End-Stage Renal Disease (ESRD)</fullName>
            </value>
            <value>
                <fullName>Kidney Resource Services (KRS) &amp; End-Stage Renal Disease (ESRD) + Chronic Kidney Disease (CKD)/Comprehensive Kidney Solutions (CKS) Stages 4 &amp; 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>