force-app/main/default/objects/ProductMix__c/fields/Long_Term_Disability__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Disability__c</fullName>
    <label>Long Term Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>