force-app/main/default/objects/ProductMix__c/fields/Maven_Maternity__c.field-meta.xml
<CustomField>
    <fullName>Maven_Maternity__c</fullName>
    <label>Maven Maternity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>