force-app/main/default/objects/ProductMix__c/fields/Medical_Necessity__c.field-meta.xml
<CustomField>
    <fullName>Medical_Necessity__c</fullName>
    <label>Medical Necessity Add On Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>