force-app/main/default/objects/ProductMix__c/fields/Medical_Products__c.field-meta.xml
<CustomField>
    <fullName>Medical_Products__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Products</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>