force-app/main/default/objects/ProductMix__c/fields/Member_Service_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Member_Service_Vendor__c</fullName>
    <label>Member Service Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accolade</fullName>
            </value>
            <value>
                <fullName>Included Health</fullName>
            </value>
            <value>
                <fullName>Quantum</fullName>
            </value>
            <value>
                <fullName>UMR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>